--- a/Deyner.Rmd
+++ b/Deyner.Rmd
@@ -20,8 +20,35 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
 # Librerias
 
-library(stringr); library(dplyr); library(rgdal); library(plyr); library(tidyverse); library(kableExtra); library(lubridate); library(ggplot2); library(plotly); library(ggpubr);library(dummies);
-library(readxl);library(sf);library(GGally);library(car);library(MLmetrics);library(wordcloud);library(gplots);library(R.utils);library(tm);library(DescTools);library(raster);library(mclust);library(geosphere);library(NbClust);library(factoextra);library(vegan);library(qpcR);library(leaflet)
+library(stringr); 
+library(dplyr); 
+library(rgdal); 
+library(plyr); 
+library(tidyverse); 
+library(kableExtra); 
+library(lubridate); 
+library(ggplot2); 
+library(plotly); 
+library(ggpubr);
+library(dummies);
+library(readxl);
+library(sf);
+library(GGally);
+library(car);
+library(MLmetrics);
+library(wordcloud);
+library(gplots);
+library(R.utils);
+library(tm);
+library(DescTools);
+library(raster);
+library(mclust);
+library(geosphere);
+library(NbClust);
+library(factoextra);
+library(vegan);
+library(qpcR);
+library(leaflet)
 ```
 
 ## 1. Introducción
@@ -220,6 +247,7 @@ base2 <- plyr::rename(base2,  c("FECHA_ACCIDENTE"="FECHA","NOMBRE_BAR"="BARRIO",
 
 #### 1.1.3 Días feriados
 
+<div style="text-align: justify">
 Para las fechas especiales se crean dos nuevas variables; `FESTIVIDAD` y `TIPO_FESTIVIDAD`. Estas variables provienen de una base de datos externa que se adiciona a la base de análisis y abarca los días feriados en Colombia desde 2014 hasta 2021.
 
 **FESTIVIDAD:** contiene dos etiquetas (SI/NO). SI: cuando hay festividad para ese día. NO: cuando no hay festividad para ese día,  
@@ -231,7 +259,7 @@ Para las fechas especiales se crean dos nuevas variables; `FESTIVIDAD` y `TIPO_F
 * BRUJAS: 31 de octubre.  
 * MADRES: el día de madres designado para el año respectivo.  
 * NUEVO: primero de enero de cada año.  
-
+</div>
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE, results = 'hide'}
 fechas_especiales <- read.csv("./datos/dias_festivos.csv", sep = ",", header = T)
@@ -282,11 +310,233 @@ base2$TIPO_FESTIVIDAD <- as.factor(base2$TIPO_FESTIVIDAD)
 
 ```{r message=FALSE, warning=FALSE , echo=FALSE, results = 'hide'}
 #EJECUTAR SOLO PARA CREAR EL CSV NUEVO
-write.csv(base2,"./datos/base_depurada.csv",fileEncoding = "UTF-8")
+#write.csv(base2,"./datos/base_depurada.csv",fileEncoding = "UTF-8")
 ```
 
 
 ## 2. Análisis descriptivo
+
+<div style="text-align: justify">
+En esta sección realizaremos el análisis descriptivo por las variables que consideramos que representan una descripción de la distribución de los datos a lo largo del periodo contenido, con el fin de ver cuál es el comportamiento de los datos.
+
+
+### 2.1 Accidentes mensuales por Año
+
+
+```{r}
+bd_final <- base2
+```
+
+```{r, message=FALSE, warning=FALSE, include=FALSE}
+
+accidentes_mes_ano <- bd_final %>% group_by(FECHA) %>% 
+  dplyr::summarize(numero_de_accidentes = n())
+accidentes_mes_ano$ano <- year(accidentes_mes_ano$FECHA)
+accidentes_mes_ano$mes <- month(accidentes_mes_ano$FECHA)
+```
+
+```{r message=FALSE, warning=FALSE , echo=T}
+aggregate(numero_de_accidentes~ano*mes, data = accidentes_mes_ano, FUN = mean) %>%
+  plot_ly(x = ~mes,
+          y = ~numero_de_accidentes, type = "scatter", mode = "lines+markers",
+          split = ~ano, line = list(width = 1.5)) %>%
+  layout(title = 'Promedio accidentes mensuales por año',
+         xaxis = list(title = "Mes"),
+         yaxis = list(title = "Número de accidentes"))
+```
+
+
+### 2.2 Accidentes por día de la semana
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_semana <- bd_final %>%
+  group_by(DIA_SEMANA) %>%
+  summarise(numero_de_accidentes = n())
+```
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_semana$DIA_SEMANA <- ordered(accidentes_semana$DIA_SEMANA, levels = c("lunes","martes","miércoles","jueves","viernes","sábado","domingo"))
+```
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+grafico_dia_semana <- ggplot(accidentes_semana, aes(fill = DIA_SEMANA, x = DIA_SEMANA, y = numero_de_accidentes)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
+  xlab("Día") + 
+  ylab("Número de accidentes ") + 
+  ggtitle("Número de accidentes por día de la semana") +
+  ylim(c(0,45000)) +
+  theme(plot.title = element_text(hjust = 0.5))+
+  guides(fill = guide_legend(title = "Día de la semana"))+
+  scale_fill_brewer(palette = "Set2")
+
+grafico_dia_semana
+```
+
+
+### 2.3 Accidentes por mes
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_mes <- bd_final %>%
+  group_by(MES) %>%
+  summarise(numero_de_accidentes = n()) 
+```
+
+```{r}
+accidentes_mes$MES <- gsub("1","Enero",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("2","Febrero",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("3","Marzo",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("4","Abril",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("5","Mayo",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("6","Junio",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("7","Julio",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("8","Agosto",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("9","Septiembre",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("Enero0","Octubre",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("EneroEnero","Noviembre",accidentes_mes$MES)
+accidentes_mes$MES <- gsub("EneroFebrero","Diciembre",accidentes_mes$MES)
+
+accidentes_mes$MES <- ordered(accidentes_mes$MES, levels = c("Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"))
+
+```
+
+
+```{r message=FALSE, warning=FALSE , echo=T}
+ggplot(data = accidentes_mes, aes(fill=MES, x = MES, y = numero_de_accidentes)) + 
+    geom_bar(stat = "identity") +
+    scale_fill_hue() +
+    geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
+    xlab("Mes") +
+    ylab("Número de accidentes") +
+    ylim(c(0,26000)) +
+    ggtitle("Número de accidentes por mes")+
+    theme(plot.title = element_text(hjust = 0.5),axis.text.x = element_text(angle = 90, hjust = 0))
+    
+
+
+
+
+```
+
+
+
+### 2.4 Accidentes por año
+
+
+```{r}
+accidente_año <- table(bd_final$ANO) %>% 
+  as.data.frame()
+```
+
+```{r message=FALSE, warning=FALSE , echo=T}
+ggplot(data = accidente_año, aes(fill = Var1, x = Var1, y = Freq)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(y = Freq, label = Freq), vjust = -0.5) +
+  scale_fill_brewer(palette = "Set2") + 
+  xlab("Año") +
+  ylab("Número de accidentes") +
+  ylim(c(0,50000)) +
+  ggtitle("Número de accidentes por año")+
+  theme(plot.title = element_text(hjust = 0.5))+
+  guides(fill = guide_legend(title = "Año"))
+```
+
+
+
+### 2.5 Accidentes por comuna
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_comuna <- bd_final %>%
+  group_by(COMUNA) %>% 
+  dplyr::summarize(numero_de_accidentes = n())
+```
+
+
+```{r message=FALSE, warning=FALSE , echo=T}
+ggplot(data = accidentes_comuna, aes( fill = COMUNA, x = reorder(COMUNA,+numero_de_accidentes), y = numero_de_accidentes)) +
+  geom_bar(stat = "identity") +
+  scale_fill_viridis_d( option = "C") +
+  geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), hjust = -0.1) +
+  xlab("Comuna") + 
+  ylab("Número de accidentes") +
+  ggtitle("Número de accidentes por comuna") +
+  ylim(c(0,60000)) +
+  coord_flip() +
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "none")
+```
+
+
+### 2.6 Accidentes por gravedad
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_gravedad <- bd_final %>%
+  group_by(GRAVEDAD) %>%
+  summarise(numero_de_accidentes = n())
+```
+
+```{r message=FALSE, warning=FALSE , echo=T}
+ggplot(data = accidentes_gravedad, aes(fill = GRAVEDAD, x = GRAVEDAD, y = numero_de_accidentes)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
+  xlab("Gravedad") + 
+  ylab("Número de acccidentes") + 
+  ggtitle("Total Accidentes por gravedad") +
+  ylim(c(0,150000))+
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "none")
+  
+```
+
+
+## 2.7 Accidentes por tipo de festividad
+
+```{r message=FALSE, warning=FALSE, results = 'hide', echo=F}
+accidentes_tipo_festividad <- bd_final %>%
+  group_by(TIPO_FESTIVIDAD) %>%
+  summarise(numero_de_accidentes = n())
+
+accidentes_tipo_festividad <- accidentes_tipo_festividad[c(1,2,3,4,5,6),]
+```
+
+```{r}
+accidentes_tipo_festividad$TIPO_FESTIVIDAD <- gsub("A_NUEVO","AÑO NUEVO",accidentes_tipo_festividad$TIPO_FESTIVIDAD)
+accidentes_tipo_festividad$TIPO_FESTIVIDAD <- gsub("SEM_SANTA","SEMANA SANTA",accidentes_tipo_festividad$TIPO_FESTIVIDAD)
+accidentes_tipo_festividad$TIPO_FESTIVIDAD <- gsub("MADRES","DIA DE LAS MADRES",accidentes_tipo_festividad$TIPO_FESTIVIDAD)
+accidentes_tipo_festividad$TIPO_FESTIVIDAD <- gsub("BRUJAS","HALLOWEEN",accidentes_tipo_festividad$TIPO_FESTIVIDAD)
+```
+
+
+```{r message=FALSE, warning=FALSE , echo=T}
+ggplot(data = accidentes_tipo_festividad, aes(fill = TIPO_FESTIVIDAD, x = TIPO_FESTIVIDAD, y = numero_de_accidentes)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
+  xlab("Tipo de festividad") + 
+  ylab("Número de acccidentes") + 
+  ggtitle("Total Accidentes por tipo de festividad") +
+  ylim(c(0,5000))+
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "none")
+  
+```
+
+
+Además de verificar los accidentes por tipo de festividad, también haremos revisión de la distribución de los datos respecto a si el día del accidente era o no festivo.
+
+```{r}
+accidentes_festividad <- bd_final %>%
+  group_by(FESTIVIDAD) %>%
+  summarise(numero_de_accidentes = n())
+```
+
+```{r}
+ggplot(data = accidentes_festividad, aes(fill = FESTIVIDAD, x = FESTIVIDAD, y = numero_de_accidentes)) +
+  geom_bar(stat = "identity") +
+  geom_text(aes(y = numero_de_accidentes, label = numero_de_accidentes), vjust = -0.5) +
+  xlab("Festivo") + 
+  ylab("Número de acccidentes") + 
+  ggtitle("Total Accidentes en días feriados") +
+  ylim(c(0,250000))+
+  theme(plot.title = element_text(hjust = 0.5),legend.position = "none")
+```
+
 
 
 ## Referencias
