--- a/Wilmar.Rmd
+++ b/Wilmar.Rmd
@@ -8,6 +8,8 @@ output: html_document
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
+library(qpcR)
+library(MLmetrics)
 ```
 
 ## Entrenamiento de un modelo predictivo
